Creating tables in PostgreSQL, had to switch db in config.ini file

--- a/config.ini
+++ b/config.ini
@@ -4,11 +4,11 @@ base=https://www.basketball-reference.com
 [requestLimiter]
 interval=60
 limit=20
+load_location=./data/rl/
 
 [postgresql]
 host=dfs-db.ce9d6aqnvhtq.us-east-1.rds.amazonaws.com
 port = 5432
-database=postgres
+database=DFS
 user=postgres
 password=REBELStennis123
-
