--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 beautifulsoup4==4.11.1
-numpy
-pandas
-html5lib
+numpy==1.22.4
+pandas==1.4.2
 psycopg2==2.9.5
 psycopg2_binary==2.9.5
 requests==2.28.1
